# buzzoff.me

./: .gitignore  CLAUDE.md  README.md  app-preview.html  docker-compose.yml  icon-concepts.html  icon-preview.html  index.html  privacy.html  render.yaml
FEATURES/: auto-pipeline-cron.md  camera-reports.md  camera-sdk.md  google-play-publish.md  google-play-step-by-step.md
admin/: .env.production  index.html  package-lock.json  package.json
admin/src/: App.tsx  index.css
app/: pubspec.yaml
app/android/: key.properties.example  settings.gradle.kts
app/assets/: test_cameras.db
app/lib/: app.dart  main.dart  main_preview.dart
app/test/: widget_test.dart
app/web/: index.html  manifest.json
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/jobs/: fetch_sources.py  generate_packs.py  geocode_pending.py  merge_cameras.py  pipeline.py  seed_israel.py
docs/: PUBLISH_GOOGLE_PLAY.md
docs/play-store/: README.md  icon-512.md  (+1 more)
play-store-materials/: README.md  feature-graphic.html  privacy-policy.html  store-listing.txt
scripts/: generate_sounds.py
sdk/: pyproject.toml
sdk/buzzoff/: __init__.py  client.py  exceptions.py  models.py
sdk/examples/: onboard_country.py  submit_cameras.py
specs/: 00-project-overview.md  01-phase-data-pipeline.md  02-phase-android-core.md  03-phase-pack-system.md  04-phase-admin-portal.md  05-phase-multi-country.md  06-phase-i18n-rtl-community.md  07-deployment-architecture.md
v2/: index.html
v3/: index.html
v4/: index.html
website/: SPEC.md  index.html
(+176 files in other folders)
