[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buzzoff-sdk"
version = "0.1.0"
description = "Python SDK for the BuzzOff Developer API — manage countries, sources, and speed camera data."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]
